reimplement using DZP::MakeMaker::Awesome
This eliminates the need to replace the MakeMaker plugin altogether and
greatly simplifies things

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Dist::Zilla::Plugin::ApacheTest
 
 {{$NEXT}}
+    - Reimplement using Dist::Zilla::Plugin::MakeMaker::Awesome. This avoids
+      replacing the MakeMaker plugin and greatly simplifies things.
 
 0.01  2010-04-01
     - initial release
