change to a PluginBundle
The bundle both generates the Apache::Test enabled Makefile.PL, as well
as uses Dist::Zilla::Plugin::DynamicPrereqs to require the appropriate
mod_perl module.

This means you need to be using [@ApacheTest] instead of [ApacheTest]

--- a/Changes
+++ b/Changes
@@ -1,8 +1,13 @@
 Revision history for Dist::Zilla::Plugin::ApacheTest
 
 {{$NEXT}}
+  *** INCOMPATIBLE CHANGE - This module now is a plugin bundle which includes a
+      MakeMaker plugin as well as a DynamicPrereq plugin.  Your dist.ini needs to
+      change from [ApacheTest] to [@ApacheTest]
     - Reimplement using Dist::Zilla::Plugin::MakeMaker::Awesome. This avoids
       replacing the MakeMaker plugin and greatly simplifies things.
+    - use Dist::Zilla::Plugin::DynamicPrereqs to require either mod_perl v1 if
+      it is installed, otherwise mod_perl2.
 
 0.01  2010-04-01
     - initial release
