--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Dist::Zilla::Plugin::ApacheTest
 
+0.03  2016-07-03
+    - add Plugin::ApacheTest for compatibility with previous releases. This is
+      marked deprecated in docs and is equivalent to [MakeMaker::ApacheTest]
+      currently.
+    - update compile tests
+    - fix possible signature test if generated files are not ignored
+
 0.02  2016-07-01
   *** INCOMPATIBLE CHANGE - This module now is a plugin bundle which includes a
       MakeMaker plugin as well as a DynamicPrereq plugin.  Your dist.ini needs to
