Build results of 733d950 (on master)

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Dist::Zilla::Plugin::ApacheTest
 
+0.04  2017-08-02
+    - include META.json in the dist
+    - include minimum perl version in META.*
+
 0.03  2016-07-03
     - add Plugin::ApacheTest for compatibility with previous releases. This is
       marked deprecated in docs and is equivalent to [MakeMaker::ApacheTest]
